fixed awkward word break in card-header

--- a/src/web/app/pages-instructor/instructor-course-enroll-page/instructor-course-enroll-page.component.scss
+++ b/src/web/app/pages-instructor/instructor-course-enroll-page/instructor-course-enroll-page.component.scss
@@ -5,7 +5,6 @@
 .card-default {
   border-color: #DDD;
   width: 100%;
-  display: block;
   margin-bottom: 20px;
 }
 
